--- a/run/application_config.json
+++ b/run/application_config.json
@@ -76,27 +76,27 @@
     "onerror": {
       "errorPageUrl": "",
       "appErrorFilter": null,
-      "templatePath": "d:\\zxjt\\zjianfang\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
+      "templatePath": "D:\\zxjt\\zjianfang\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
     },
     "i18n": {
       "defaultLocale": "en_US",
       "dirs": [
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-session\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-security\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-jsonp\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-onerror\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-i18n\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-watcher\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-schedule\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-multipart\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-development\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-logrotator\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-static\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-view\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-redis\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg-fortypeorm\\config\\locales",
-        "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\locales",
-        "d:\\zxjt\\zjianfang\\config\\locales"
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-session\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-security\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-jsonp\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-onerror\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-i18n\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-watcher\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-schedule\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-multipart\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-development\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-logrotator\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-static\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-view\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-redis\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg-fortypeorm\\config\\locales",
+        "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\locales",
+        "D:\\zxjt\\zjianfang\\config\\locales"
       ],
       "queryField": "locale",
       "cookieField": "locale",
@@ -106,14 +106,14 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "d:\\zxjt\\zjianfang\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "d:\\zxjt\\zjianfang\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "D:\\zxjt\\zjianfang\\node_modules\\egg-watcher\\lib\\event-sources\\default",
+        "development": "D:\\zxjt\\zjianfang\\node_modules\\egg-watcher\\lib\\event-sources\\development"
       }
     },
     "customLogger": {
       "scheduleLogger": {
         "consoleLevel": "NONE",
-        "file": "d:\\zxjt\\zjianfang\\logs\\zjianfang\\egg-schedule.log"
+        "file": "D:\\zxjt\\zjianfang\\logs\\zjianfang\\egg-schedule.log"
       }
     },
     "schedule": {
@@ -153,14 +153,14 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "d:\\zxjt\\zjianfang\\app\\public",
+      "dir": "D:\\zxjt\\zjianfang\\app\\public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
       "maxFiles": 1000
     },
     "view": {
-      "root": "d:\\zxjt\\zjianfang\\app\\view",
+      "root": "D:\\zxjt\\zjianfang\\app\\view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -221,6 +221,7 @@
         "clean": "ets clean"
       },
       "dependencies": {
+        "await-stream-ready": "^1.0.1",
         "egg": "^2.6.1",
         "egg-fortypeorm": "^1.0.5",
         "egg-redis": "^2.3.0",
@@ -257,9 +258,9 @@
       "author": "",
       "license": "MIT"
     },
-    "baseDir": "d:\\zxjt\\zjianfang",
+    "baseDir": "D:\\zxjt\\zjianfang",
     "HOME": "C:\\Users\\jh",
-    "rundir": "d:\\zxjt\\zjianfang\\run",
+    "rundir": "D:\\zxjt\\zjianfang\\run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -290,7 +291,7 @@
       "returnRawBody": true
     },
     "logger": {
-      "dir": "d:\\zxjt\\zjianfang\\logs\\zjianfang",
+      "dir": "D:\\zxjt\\zjianfang\\logs\\zjianfang",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -384,8 +385,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-session",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-session",
       "version": "3.1.0"
     },
     "security": {
@@ -397,8 +398,8 @@
         "session"
       ],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-security",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-security",
       "version": "2.4.3"
     },
     "jsonp": {
@@ -410,8 +411,8 @@
         "security"
       ],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-jsonp",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -423,8 +424,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-onerror",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-onerror",
       "version": "2.1.0"
     },
     "i18n": {
@@ -434,8 +435,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-i18n",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-i18n",
       "version": "2.0.0"
     },
     "watcher": {
@@ -445,8 +446,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-watcher",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-watcher",
       "version": "3.1.0"
     },
     "schedule": {
@@ -456,8 +457,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-schedule",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-schedule",
       "version": "3.6.0"
     },
     "multipart": {
@@ -469,8 +470,8 @@
         "schedule"
       ],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-multipart",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-multipart",
       "version": "2.4.0"
     },
     "development": {
@@ -484,8 +485,8 @@
       "env": [
         "local"
       ],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-development",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-development",
       "version": "2.4.2"
     },
     "logrotator": {
@@ -497,8 +498,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-logrotator",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-logrotator",
       "version": "3.0.5"
     },
     "static": {
@@ -508,8 +509,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\config\\plugin.ts",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-static",
+      "from": "D:\\zxjt\\zjianfang\\config\\plugin.ts",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-static",
       "version": "2.2.0"
     },
     "view": {
@@ -519,8 +520,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-view",
+      "from": "D:\\zxjt\\zjianfang\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-view",
       "version": "2.1.2"
     },
     "redis": {
@@ -530,8 +531,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\config\\plugin.ts",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-redis",
+      "from": "D:\\zxjt\\zjianfang\\config\\plugin.ts",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-redis",
       "version": "2.3.0"
     },
     "typeorm": {
@@ -541,8 +542,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "d:\\zxjt\\zjianfang\\config\\plugin.ts",
-      "path": "d:\\zxjt\\zjianfang\\node_modules\\egg-fortypeorm",
+      "from": "D:\\zxjt\\zjianfang\\config\\plugin.ts",
+      "path": "D:\\zxjt\\zjianfang\\node_modules\\egg-fortypeorm",
       "version": "1.0.5"
     }
   }
